# mini-cedar-api

./: Cargo.toml  Dockerfile  LICENSE  Readme.md  docker-compose.yml  rest-apis.http
src/: main.rs
