[package]
name = "mini_cedar_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
bytes = "1.8.0"
cedar-policy = "2.5.0" # this is based on the version that AVP currently supports
http = "1.1.0"
http-body-util = "0.1.2"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["catch-panic"] }
