[package]
name = "mini_cedar_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
bytes = "1.10.1"
cedar-policy = "4.3.3" # this is based on the version that AVP currently supports
http = "1.3.1"
http-body-util = "0.1.3"
serde = "1"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["catch-panic"] }
